# TinySQL

./: CMakeLists.txt  README.md  index.html  queries.sql
.claude/: settings.local.json
assets/: index-DUJ4Wfrs.js
data/: customers.csv  departments.csv  employees.csv  orders.csv  purchases.csv
docs/: index.html  package-lock.json  package.json
docs/src/: App.jsx
docs/src/components/: Badge.jsx  CodeBlock.jsx  DocsPage.jsx  InstallPage.jsx  Playground.jsx
src/: ast.hpp  csv_reader.cpp  csv_reader.hpp  executor.cpp.bak  executor.hpp  main.cpp  parser.cpp  parser.hpp  table.hpp  tokenizer.cpp  tokenizer.hpp
